syntax = "proto3";
package com.techprimer.greeting;

option java_multiple_files = true;
option java_package = "com.techprimer.grpc";


service GreetingService{
    rpc Greeting(GreetingRequest) returns (GreetingResponse){

    }
}
message GreetingRequest{
    string message = 1;

}

message GreetingResponse{
    string message = 1;
}